src/objects/EC_Question__c.object
<CustomObject>
    <fields>
        <fullName>Number_2__c</fullName>
        <label>Number_2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>OrderNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist_AMUTAP__c</fullName>
        <label>Picklist_AMUTAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_ASPJSP__c</fullName>
        <label>Picklist_ASPJSP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASP</fullName>
                </value>
                <value>
                    <fullName>JSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_AT2__c</fullName>
        <label>Picklist_AT2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Occasionally</fullName>
                </value>
                <value>
                    <fullName>Often</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_AT__c</fullName>
        <label>Picklist_AT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Active__c</fullName>
        <label>Picklist_Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_AppServer__c</fullName>
        <label>Picklist_AppServer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apache Tomcat 7.x</fullName>
                </value>
                <value>
                    <fullName>Apache Tomcat 8.x</fullName>
                </value>
                <value>
                    <fullName>JBoss Application Server 7.4.x</fullName>
                </value>
                <value>
                    <fullName>Oracle WebLogic Server 12.x</fullName>
                </value>
                <value>
                    <fullName>Oracle GlassFish Server 3.x</fullName>
                </value>
                <value>
                    <fullName>Oracle Web Application Server 10gR3</fullName>
                </value>
                <value>
                    <fullName>IBM WebSphere 8.5.x</fullName>
                </value>
                <value>
                    <fullName>Microsoft IIS 10</fullName>
                </value>
                <value>
                    <fullName>Microsoft IIS 8</fullName>
                </value>
                <value>
                    <fullName>Microsoft IIS 7</fullName>
                </value>
                <value>
                    <fullName>SAP NetWeaver 7.4.x</fullName>
                </value>
                <value>
                    <fullName>Wildfly 10.x</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_AssesmentPlan__c</fullName>
        <description>Platform Plans, Application Plans -- Assessment Tab -- Section 3,4</description>
        <label>Picklist_AssesmentPlan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-No Plans</fullName>
                </value>
                <value>
                    <fullName>2-Not Sure</fullName>
                </value>
                <value>
                    <fullName>3-Possible</fullName>
                </value>
                <value>
                    <fullName>4-Likely</fullName>
                </value>
                <value>
                    <fullName>5-Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_AssesmentPlatProvider__c</fullName>
        <description>Preferred platform provider -- Assessment Tab -- Section 4</description>
        <label>Picklist_AssesmentPlatProvider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U 680 AWS</fullName>
                </value>
                <value>
                    <fullName>U 681 Microsoft Azure</fullName>
                </value>
                <value>
                    <fullName>U 682 Google Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_AssesmentPlatform__c</fullName>
        <description>Platform Assessment -- Assessment Tab -- Section 2</description>
        <label>Picklist_AssesmentPlatform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Does not meet Expectations</fullName>
                </value>
                <value>
                    <fullName>2-Partially meets Expectations</fullName>
                </value>
                <value>
                    <fullName>3-Meets Expectations</fullName>
                </value>
                <value>
                    <fullName>4-Exceeds Expectations</fullName>
                </value>
                <value>
                    <fullName>5-Extraordinary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_AuthPolicy__c</fullName>
        <label>Picklist_AuthPolicy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Backup__c</fullName>
        <label>Picklist_Backup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Based__c</fullName>
        <label>Picklist_Based</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Browser__c</fullName>
        <label>Picklist_Browser</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Edge</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_CAM__c</fullName>
        <label>Picklist_CAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows Authentication</fullName>
                </value>
                <value>
                    <fullName>LDAP</fullName>
                </value>
                <value>
                    <fullName>Kerberos</fullName>
                </value>
                <value>
                    <fullName>Usher</fullName>
                </value>
                <value>
                    <fullName>Standard Authentication</fullName>
                </value>
                <value>
                    <fullName>Customer ESM</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>Database Authentication</fullName>
                </value>
                <value>
                    <fullName>Trusted Authentication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Cache__c</fullName>
        <label>Picklist_Cache</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Centralized</fullName>
                </value>
                <value>
                    <fullName>Remote Shared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Cloud__c</fullName>
        <label>Picklist_Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Google Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Cluster__c</fullName>
        <label>Picklist_Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asymmetric</fullName>
                </value>
                <value>
                    <fullName>Symmetric</fullName>
                </value>
                <value>
                    <fullName>Unclustered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_DBType1__c</fullName>
        <label>Picklist_DBType1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amazon Aurora</fullName>
                </value>
                <value>
                    <fullName>EnterpriseDB 9.x</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 11.1</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 10.5 Fix Pack 5</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 10.1 Fix Pack 4</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 9.7 Fix Pack 10</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Z/OS 11</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Z/OS 10</fullName>
                </value>
                <value>
                    <fullName>IBM Informix 12.1</fullName>
                </value>
                <value>
                    <fullName>IBM Informix 11.7</fullName>
                </value>
                <value>
                    <fullName>MariaDB 5.5</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL Server 2016</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL Server 2014</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL Server 2012</fullName>
                </value>
                <value>
                    <fullName>Oracle MySQL 5.6</fullName>
                </value>
                <value>
                    <fullName>Oracle MySQL 5.5</fullName>
                </value>
                <value>
                    <fullName>Oracle Database 12c</fullName>
                </value>
                <value>
                    <fullName>Oracle Database 11gR2</fullName>
                </value>
                <value>
                    <fullName>Oracle Database 11g</fullName>
                </value>
                <value>
                    <fullName>PostgreSQL 9.x</fullName>
                </value>
                <value>
                    <fullName>Teradata 16.0</fullName>
                </value>
                <value>
                    <fullName>Teradata 15.10</fullName>
                </value>
                <value>
                    <fullName>Teradata 15.0</fullName>
                </value>
                <value>
                    <fullName>Teradata 14.10</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_DBType2__c</fullName>
        <label>Picklist_DBType2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 11.1</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 10.5 Fix Pack 5</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 10.1 Fix Pack 4</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux UNIX and Windows 9.7 Fix Pack 10</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL Server 2016</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL Server 2014</fullName>
                </value>
                <value>
                    <fullName>Microsoft SQL Server 2012</fullName>
                </value>
                <value>
                    <fullName>Oracle MySQL 5.6</fullName>
                </value>
                <value>
                    <fullName>Oracle MySQL 5.5</fullName>
                </value>
                <value>
                    <fullName>Oracle Database 12c</fullName>
                </value>
                <value>
                    <fullName>Oracle Database 11gR2</fullName>
                </value>
                <value>
                    <fullName>Oracle Database 11g</fullName>
                </value>
                <value>
                    <fullName>Teradata 16.0</fullName>
                </value>
                <value>
                    <fullName>Teradata 15.10</fullName>
                </value>
                <value>
                    <fullName>Teradata 15.0</fullName>
                </value>
                <value>
                    <fullName>Teradata 14.10</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_DBType3__c</fullName>
        <label>Picklist_DBType3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft SQL Server</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for UNIX</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Windows</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_DB__c</fullName>
        <label>Picklist_DB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQL Server</fullName>
                </value>
                <value>
                    <fullName>Teradata</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>MySQL</fullName>
                </value>
                <value>
                    <fullName>DB2</fullName>
                </value>
                <value>
                    <fullName>Netezza</fullName>
                </value>
                <value>
                    <fullName>MariaDB</fullName>
                </value>
                <value>
                    <fullName>MEM SQL</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Devices__c</fullName>
        <label>Picklist_Devices</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Driver2__c</fullName>
        <label>Picklist_Driver2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EnterpriseDB</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Linux</fullName>
                </value>
                <value>
                    <fullName>UNIX</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>IBM DB2 for Z/OS</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy ODBC Driver for SQLServer Wire Protocol</fullName>
                </value>
                <value>
                    <fullName>MySQL ODBC Driver</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy ODBC Driver for Oracle Wire Protocol</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy ODBC Driver for PostgreSQL Wire Protocol</fullName>
                </value>
                <value>
                    <fullName>Teradata ODBC Driver</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Driver__c</fullName>
        <label>Picklist_Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MicroStrategy ODBC Driver for DB2 Wire Protocol</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy ODBC Driver for SQLServer Wire Protocol</fullName>
                </value>
                <value>
                    <fullName>MySQL ODBC Driver</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy ODBC Driver for Oracle Wire Protocol</fullName>
                </value>
                <value>
                    <fullName>MicroStrategy ODBC Driver for Sybase ASE Wire Protocol</fullName>
                </value>
                <value>
                    <fullName>Teradata ODBC Driver</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_EV__c</fullName>
        <label>Picklist_EV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AirWatch</fullName>
                </value>
                <value>
                    <fullName>BlackBerry</fullName>
                </value>
                <value>
                    <fullName>MobileIron</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_EncrpLevel__c</fullName>
        <label>Picklist_EncrpLevel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium (Default)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Environment__c</fullName>
        <label>Picklist_Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROD</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>TEST</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Fetch__c</fullName>
        <label>Picklist_Fetch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>fetchURL</fullName>
                </value>
                <value>
                    <fullName>FetchTable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Firewall__c</fullName>
        <label>Picklist_Firewall</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Packet Filter</fullName>
                </value>
                <value>
                    <fullName>Application Gateway</fullName>
                </value>
                <value>
                    <fullName>Circuit Gateway</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Grade__c</fullName>
        <label>Picklist_Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_HL__c</fullName>
        <label>Picklist_HL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_HP__c</fullName>
        <label>Picklist_HP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>MSTR Cloud</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_HS__c</fullName>
        <label>Picklist_HS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Display default home screen</fullName>
                </value>
                <value>
                    <fullName>Display contents of folder</fullName>
                </value>
                <value>
                    <fullName>Display custom home screen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_Hotfix__c</fullName>
        <label>Picklist_Hotfix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hotfix 1</fullName>
                </value>
                <value>
                    <fullName>Hotfix 2</fullName>
                </value>
                <value>
                    <fullName>Hotfix 3</fullName>
                </value>
                <value>
                    <fullName>Hotfix 4</fullName>
                </value>
                <value>
                    <fullName>Hotfix 5</fullName>
                </value>
                <value>
                    <fullName>Hotfix 6</fullName>
                </value>
                <value>
                    <fullName>Hotfix 7</fullName>
                </value>
                <value>
                    <fullName>Hotfix 8</fullName>
                </value>
                <value>
                    <fullName>Hotfix 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_IM__c</fullName>
        <label>Picklist_IM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>During Major Upgrades</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_ISOSComponent__c</fullName>
        <label>Picklist_ISOSComponent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 R2</fullName>
                </value>
                <value>
                    <fullName>Windows 2012</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 R2</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 7.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.0.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.1.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.2.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.3.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.4.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.5.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.6.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 6.7.x</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 5.5</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 5.6</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Linux 5.7</fullName>
                </value>
                <value>
                    <fullName>SUSE Linux Enterprise Server 12</fullName>
                </value>
                <value>
                    <fullName>SUSE Linux Enterprise Server 11</fullName>
                </value>
                <value>
                    <fullName>IBM AIX 7.1</fullName>
                </value>
                <value>
                    <fullName>IBM AIX 6.2</fullName>
                </value>
                <value>
                    <fullName>IBM AIX 6.1</fullName>
                </value>
                <value>
                    <fullName>Oracle Solaris 11.x</fullName>
                </value>
                <value>
                    <fullName>Oracle Solaris 10.x</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>